# acts-framework

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
Algorithms/Generators/: CMakeLists.txt
Algorithms/Reconstruction/: CMakeLists.txt
Algorithms/Reconstruction/ACTFW/MikadoTracker/: Tracker.cxx  requirements.txt
Algorithms/Reconstruction/ACTFW/pytorch/: CMakeLists.txt  hitClassify.py  main.cpp  main.hpp
Core/include/ACTFW/Framework/: BareAlgorithm.hpp
Examples/: CMakeLists.txt
Examples/Fatras/: CMakeLists.txt
Examples/Gsoc2019/: CMakeLists.txt  Reconstruction.cpp
